remove :contentReference[oaicite:1]{index=1}

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="subtitle">Programmer · Analyst · Data Engineer / Fullstack Developer</p>
           <p>
             Detail-oriented Data Engineer & Analytics professional with 12+ years building enterprise systems,
-            ETL pipelines, and reporting tools. Skilled in SQL, Python, Laravel, .NET, BigQuery, Tableau, and Power BI. :contentReference[oaicite:1]{index=1}
+            ETL pipelines, and reporting tools. Skilled in SQL, Python, Laravel, .NET, BigQuery, Tableau, and Power BI. 
           </p>
           <p class="cta-row">
             <a class="btn primary" href="assets/resume.pdf" target="_blank" rel="noopener">Download CV</a>
