add on 2 page, resume and project pdf shopamore. update working experience and projects.

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
           <h1>Elsha Sovolina</h1>
           <p class="subtitle">Programmer · Analyst · Data Engineer / Fullstack Developer</p>
           <p>
-            Detail-oriented Data Engineer & Analytics professional with 12+ years building enterprise systems,
+            Detail-oriented Data Engineer & Analytics professional with 19 years building enterprise systems,
             ETL pipelines, and reporting tools. Skilled in SQL, Python, Laravel, .NET, BigQuery, Tableau, and Power BI. 
           </p>
           <p class="cta-row">
-            <a class="btn primary" href="assets/resume.pdf" target="_blank" rel="noopener">Download CV</a>
+            <a class="btn primary" href="resume.html" target="_blank" rel="noopener">View CV</a>
             <a class="btn" href="mailto:elsha.sovolina@gmail.com">Contact</a>
           </p>
         </div>
@@ -76,27 +76,48 @@
         <h2>Skills</h2>
         <div class="skills-grid">
           <div>
-            <h3>Engineering</h3>
+            <h3>Technical</h3>
             <ul>
-              <li>SQL (Oracle, MySQL, MS SQL, BigQuery)</li>
-              <li>ETL / Data pipelines</li>
+              <li>SQL</li>
+              <li>Extract, Transform, Load (ETL)</li>
               <li>Database design & optimisation</li>
-            </ul>
-          </div>
-          <div>
-            <h3>Programming</h3>
-            <ul>
-              <li>Python (data analysis)</li>
-              <li>PHP (Laravel), .NET, Delphi</li>
-              <li>JavaScript, REST APIs</li>
+              <li>Python</li>
+              <li>Delphi</li>
+              <li>ASP</li>
+              <li>Javascript</li>
+              <li>HTML</li>
+              <li>C#</li>
+              <li>Basic</li>
+              
             </ul>
           </div>
           <div>
             <h3>Analytics & Tools</h3>
             <ul>
-              <li>Tableau, Power BI</li>
-              <li>BigQuery</li>
-              <li>CI/Git, basic GCP</li>
+              <li>MySQL</li>
+              <li>Oracle</li>
+              <li>SQL Server</li>
+              <li>Google Big Query</li>
+              <li>Google Colab</li>
+              <li>Code Gear</li>
+              <li>NetCore</li>
+              <li>Visual Basic</li>
+              <li>Tableau</li>
+              <li>Power BI</li>
+              <li>Git</li>
+              <li>Figma</li>
+            </ul>
+          </div>
+          <div>
+            <h3>Soft Skills</h3>
+            <ul>
+              <li>Great communication</li>
+              <li>Problem-solving</li>
+              <li>Teamwork</li>
+              <li>Leadership</li>
+              <li>Fast Learner</li>
+              <li>High Adaptibility</li>
+              <li>Detail Oriented</li>
             </ul>
           </div>
         </div>
@@ -109,21 +130,37 @@
         <h2>Experience</h2>
 
         <article class="job">
-          <h3>Makin Group — Developer & Application Support</h3>
+          <h3>Makin Group & Dhanistha Group (Palm oil Plantation) — Developer & Application Support</h3>
           <p class="muted">Jun 2012 – Mar 2025 • Central Jakarta</p>
           <ul>
             <li>Designed and implemented ETL pipelines consolidating plantation operational data.</li>
-            <li>Maintained Oracle databases, created automated reporting, and led migration to Laravel.</li>
+            <li>Maintained Oracle databases, created automated reporting, and involved with project migration to Laravel.</li>
             <li>Improved reporting speed and supported data quality initiatives.</li>
+            <li>Supporting and maintain Administration Web Apps called Portal that maintain HR data like attendance, Medical and Business Trips.</li>
           </ul>
         </article>
-
         <article class="job">
-          <h3>PT. HD Finance (Radana Finance) — Senior Developer / System Analyst</h3>
+          <h3>Femina Group (Magazine) — Senior Developer / System Analyst</h3>
           <p class="muted">May 2009 – Jun 2012 • Jakarta</p>
           <ul>
-            <li>Designed backend applications with ASP.NET and SQL Server.</li>
-            <li>Built ETL workflows and reporting solutions to support operations.</li>
+            <li>Planned workflows, designed and developed database diagrams, and built the system (Tools : ASP.NET, SQL Server 2000, and Visual Basic 6.0).</li>
+            <li>Designed, developed, and maintained applications supporting the company’s event operations. </li>
+            <li> Served as the Senior Developer Lead, responsible for evaluating and approving all user requests and development decisions.</li>
+          </ul>
+        </article>
+        <article class="job">
+          <h3>PT. HD Finance (Radana Finance, Multifinance Company) — MAI Specialist/IT Developer and Support </h3>
+          <p class="muted">Dec 2007 – May 2009 • Jakarta</p>
+          <ul>
+            <li>Analyzed, designed, developed, and maintained backend support software.</li>
+            <li>Developed on-demand business reports.</li>
+          </ul>
+        </article>
+        <article class="job">
+          <h3>Indomobil (Dealer), PT Tunas Esa Mandiri (Forwarding) - Junior Porgrammer </h3>
+          <p class="muted">Sep 2005 – Nov 2007 • Jakarta</p>
+          <ul>
+            <li>Developed, modified, and troubleshot modules as requested by the IT Head.</li>
           </ul>
         </article>
       </div>
@@ -145,6 +182,17 @@
           <div class="project-card">
             <h4>Medical & Business Trip Claims Model</h4>
             <p>(2024–2025) — Transaction models to streamline internal claims and approvals.</p>
+          </div>
+          <div class="project-card">
+            <h4>ShopAmore Analytics Report</h4>
+              <a href="assets/shopamore.pdf" target="_blank" rel="noopener">
+                <img src="assets/shopamore-thumb.jpg"
+                    alt="Thumbnail of ShopAmore Analytics Report"
+                    style="width:100%; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:8px;">
+              </a>
+              <p>(2025) — Analytical report and dashboard insights for <strong>ShopAmore</strong> e-commerce dataset.  
+                <a href="assets/shopamore.pdf" target="_blank" rel="noopener">View PDF</a>
+              </p>
           </div>
           <div class="project-card">
             <h4>Public Tableau Dashboards</h4>
