update pemisahan projects n hapus no telp

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
           <ul>
             <li><strong>Location:</strong> Jakarta, Indonesia</li>
             <li><strong>Email:</strong> <a href="mailto:elsha.sovolina@gmail.com">elsha.sovolina@gmail.com</a></li>
-            <li><strong>Phone:</strong> 085890623667</li>
             <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/elsha-sovolina-s-126346119" target="_blank">linkedin.com/in/elsha-sovolina-s-126346119</a></li>
           </ul>
         </div>
@@ -169,20 +168,8 @@
     <!-- PROJECTS -->
     <section id="projects" class="section alt">
       <div class="container">
-        <h2>Selected Projects</h2>
+        <h2>Data Related Projects</h2>
         <div class="projects-grid">
-          <div class="project-card">
-            <h4>Piece Rate Calculation System</h4>
-            <p>(2022–2023) — Wage calculation logic, bonus & penalty rules for plantation workforce.</p>
-          </div>
-          <div class="project-card">
-            <h4>Multi-Site Worker Data Consolidation</h4>
-            <p>(2017–2018) — Aggregation across sites; prepared systems for BI and warehouse integration.</p>
-          </div>
-          <div class="project-card">
-            <h4>Medical & Business Trip Claims Model</h4>
-            <p>(2024–2025) — Transaction models to streamline internal claims and approvals.</p>
-          </div>
           <div class="project-card">
             <h4>ShopAmore Analytics Report</h4>
               <a href="assets/shopamore.pdf" target="_blank" rel="noopener">
@@ -202,11 +189,23 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section">
+    <section id="projects" class="section alt">
       <div class="container">
-        <h2>Contact</h2>
-        <p>If you'd like to work together or request my full resume, email me at <a href="mailto:elsha.sovolina@gmail.com">elsha.sovolina@gmail.com</a> or call 085890623667.</p>
+        <h2>Software Developer Projects</h2>
+        <div class="projects-grid">
+          <div class="project-card">
+            <h4>Piece Rate Calculation System</h4>
+            <p>(2022–2023) — Wage calculation logic, bonus & penalty rules for plantation workforce.</p>
+          </div>
+          <div class="project-card">
+            <h4>Multi-Site Worker Data Consolidation</h4>
+            <p>(2017–2018) — Aggregation across sites; prepared systems for BI and warehouse integration.</p>
+          </div>
+          <div class="project-card">
+            <h4>Medical & Business Trip Claims Model</h4>
+            <p>(2024–2025) — Transaction models to streamline internal claims and approvals.</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
