add link to project.html

--- a/index.html
+++ b/index.html
@@ -164,13 +164,12 @@
         <div class="projects-grid">
           <div class="project-card">
             <h4>ShopAmore Analytics Report</h4>
-              <a href="assets/shopamore.pdf" target="_blank" rel="noopener">
-                <img src="assets/shopamore-thumb.jpg"
-                    alt="Thumbnail of ShopAmore Analytics Report"
+              <a href="project.html?name=shopamore">
+                <img src="assets/shopamore-thumb.jpg" alt="ShopAmore project thumbnail"
                     style="width:100%; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:8px;">
               </a>
-              <p>(2025) — Analytical report and dashboard insights for <strong>ShopAmore</strong> e-commerce dataset.  
-                <a href="assets/shopamore.pdf" target="_blank" rel="noopener">View PDF</a>
+              <p>(2025) — Analytical report and dashboard insights for <strong>ShopAmore</strong> e-commerce dataset.
+                <a href="project.html?name=shopamore">Read more</a>
               </p>
           </div>
           <div class="project-card">
