--- a/project.html
+++ b/project.html
@@ -143,72 +143,67 @@
   </footer>
 
   <script>
-    async function loadProject() {
-      const params = new URLSearchParams(window.location.search);
-      const name = params.get("name");
-      const res = await fetch("projects.json");
-      const data = await res.json();
-      const p = data[name];
+async function loadProject() {
+  const params = new URLSearchParams(window.location.search);
+  const name = params.get("name");
+  const res = await fetch("projects.json");
+  const data = await res.json();
+  const p = data[name];
 
-      if (!p) {
-        document.getElementById("project-content").innerHTML = "<p>Project not found.</p>";
-        return;
-      }
+  if (!p) {
+    document.getElementById("project-content").innerHTML = "<p>Project not found.</p>";
+    return;
+  }
 
-      // Fill content
-      document.getElementById("project-title").textContent = p.title;
-      document.getElementById("project-background").textContent = p.background;
-      document.getElementById("project-objective").textContent = p.objective;
-      document.getElementById("project-methodology").textContent = p.methodology;
-      document.getElementById("project-result").textContent = p.result;
+  // Fill basic info
+  document.getElementById("project-title").textContent = p.title;
+  document.getElementById("project-background").textContent = p.background;
+  document.getElementById("project-objective").textContent = p.objective;
+  document.getElementById("project-methodology").textContent = p.methodology;
+  document.getElementById("project-result").textContent = p.result;
 
-      // PDF viewer
-      if (p.pdf) {
-        document.getElementById("project-pdf").innerHTML = `
-          <a href="${p.pdf}" target="_blank" rel="noopener" class="btn primary">📄 View Full Report (PDF)</a>
-          <iframe src="${p.pdf}" class="pdf-embed"></iframe>
-        `;
-      }
+  // PDF section
+  if (p.pdf) {
+    document.getElementById("project-pdf").innerHTML = `
+      <a href="${p.pdf}" target="_blank" rel="noopener" class="btn primary">📄 View Full Report (PDF)</a>
+      <iframe src="${p.pdf}" class="pdf-embed"></iframe>
+    `;
+  }
 
-      // Tableau embed
-    // Tableau embed (safe dynamic execution)
-if (p.tableau) {
-  const div = document.createElement("div");
-  div.id = "tableauViz";
-  div.className = "tableauPlaceholder";
-  div.style.position = "relative";
-  div.innerHTML = `
-    <noscript><a href="#"><img alt="${p.title}" style="border:none" /></a></noscript>
-    <object class="tableauViz" style="display:none;">
-      <param name="host_url" value="${encodeURIComponent(p.tableau.host)}" />
-      <param name="embed_code_version" value="3" />
-      <param name="site_root" value="" />
-      <param name="name" value="${p.tableau.path}" />
-      <param name="tabs" value="no" />
-      <param name="toolbar" value="yes" />
-      <param name="animate_transition" value="yes" />
-      <param name="display_static_image" value="yes" />
-      <param name="display_spinner" value="yes" />
-      <param name="display_overlay" value="yes" />
-      <param name="display_count" value="yes" />
-      <param name="language" value="en-US" />
-    </object>
-  `;
-  document.getElementById("project-tableau").appendChild(div);
+  // Tableau section (using API)
+  if (p.tableau) {
+    document.getElementById("project-tableau").innerHTML = `
+      <h3>Interactive Tableau Dashboard</h3>
+      <div id="tableauVizContainer" style="width:100%;height:700px;margin-top:20px;"></div>
+    `;
 
-  // Load Tableau script AFTER adding HTML
-  const script = document.createElement("script");
-  script.src = "https://public.tableau.com/javascripts/api/viz_v1.js";
-  script.onload = function () {
-    console.log("Tableau viz loaded");
-  };
-  document.body.appendChild(script);
+    // Load Tableau script if not already loaded
+    if (!window.tableau) {
+      const script = document.createElement("script");
+      script.src = "https://public.tableau.com/javascripts/api/tableau-2.min.js";
+      script.onload = () => initTableau(p.tableau);
+      document.body.appendChild(script);
+    } else {
+      initTableau(p.tableau);
+    }
+  }
 }
 
-    }
+function initTableau(tbl) {
+  const containerDiv = document.getElementById("tableauVizContainer");
+  const url = `${tbl.host}${tbl.path}`;
+  const options = {
+    hideTabs: true,
+    hideToolbar: false,
+    width: "100%",
+    height: "700px"
+  };
+  new tableau.Viz(containerDiv, url, options);
+}
 
-    document.getElementById("year").textContent = new Date().getFullYear();
-    loadProject();
-  </script>
+document.getElementById("year").textContent = new Date().getFullYear();
+loadProject();
+</script>
+
 </body>
 </html>
