update tableau lagi

--- a/project.html
+++ b/project.html
@@ -8,7 +8,7 @@
   <!-- Fonts & main stylesheet -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
-
+  <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
   <style>
     :root {
       --accent: #0f62fe;
@@ -132,8 +132,13 @@
       <div class="pdf-view" id="project-pdf"></div>
 
       <!-- Tableau section -->
-      <div class="tableau-view" id="project-tableau"></div>
-    </div>
+      <section id="project-tableau" style="margin-top:40px;">
+  <h3>Interactive Tableau Dashboard</h3>
+  <div id="tableauVizContainer" style="width:100%;height:700px;background:#f9f9f9;text-align:center;display:flex;align-items:center;justify-content:center;">
+    <span id="loading-text">Loading dashboard...</span>
+  </div>
+</section>
+
   </main>
 
   <footer class="site-footer">
@@ -142,68 +147,72 @@
     </div>
   </footer>
 
-  <script>
-    async function loadProject() {
-    const params = new URLSearchParams(window.location.search);
-    const name = params.get("name");
-    const res = await fetch("projects.json");
-    const data = await res.json();
-    const p = data[name];
+ <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", async function () {
+  const params = new URLSearchParams(window.location.search);
+  const name = params.get("name");
 
-    if (!p) {
-      document.getElementById("project-content").innerHTML = "<p>Project not found.</p>";
-      return;
-    }
+  // Load JSON
+  const res = await fetch("projects.json");
+  const data = await res.json();
+  const p = data[name];
 
-    // Fill basic info
-    document.getElementById("project-title").textContent = p.title;
-    document.getElementById("project-background").textContent = p.background;
-    document.getElementById("project-objective").textContent = p.objective;
-    document.getElementById("project-methodology").textContent = p.methodology;
-    document.getElementById("project-result").textContent = p.result;
-
-    // PDF section
-    if (p.pdf) {
-      document.getElementById("project-pdf").innerHTML = `
-        <a href="${p.pdf}" target="_blank" rel="noopener" class="btn primary">📄 View Full Report (PDF)</a>
-        <iframe src="${p.pdf}" class="pdf-embed"></iframe>
-      `;
-    }
-
-    // Tableau section (using API)
-    if (p.tableau) {
-      document.getElementById("project-tableau").innerHTML = `
-        <h3>Interactive Tableau Dashboard</h3>
-        <div id="tableauVizContainer" style="width:100%;height:700px;margin-top:20px;"></div>
-      `;
-
-      // Load Tableau script if not already loaded
-      if (!window.tableau) {
-        const script = document.createElement("script");
-        script.src = "https://public.tableau.com/javascripts/api/tableau-2.min.js";
-        script.onload = () => initTableau(p.tableau);
-        document.body.appendChild(script);
-      } else {
-        initTableau(p.tableau);
-      }
-    }
+  if (!p) {
+    document.getElementById("project-content").innerHTML = "<p>Project not found.</p>";
+    return;
   }
 
-  function initTableau(tbl) {
+  console.log("✅ Loaded project:", p);
+
+  // --- Fill Text Fields ---
+  document.getElementById("project-title").textContent = p.title;
+  document.getElementById("project-background").textContent = p.background;
+  document.getElementById("project-objective").textContent = p.objective;
+  document.getElementById("project-methodology").textContent = p.methodology;
+  document.getElementById("project-result").textContent = p.result;
+
+  // --- PDF Section ---
+  if (p.pdf) {
+    const pdfSection = document.getElementById("project-pdf");
+    pdfSection.innerHTML = `
+      <h3>Project Report</h3>
+      <a href="${p.pdf}" target="_blank" rel="noopener" class="btn primary">📄 View Full Report (PDF)</a>
+      <iframe src="${p.pdf}" class="pdf-embed" style="width:100%;height:600px;margin-top:16px;border:1px solid #ddd;border-radius:8px;"></iframe>
+    `;
+  }
+
+  // --- Tableau Section ---
+  if (p.tableau) {
     const containerDiv = document.getElementById("tableauVizContainer");
-    const url = `${tbl.host}${tbl.path}`;
-    const options = {
-      hideTabs: true,
-      hideToolbar: false,
-      width: "100%",
-      height: "700px"
-    };
-    new tableau.Viz(containerDiv, url, options);
-  }
+    const loadingText = document.getElementById("loading-text");
+    const url = typeof p.tableau === "string" ? p.tableau : `${p.tableau.host}${p.tableau.path}`;
 
-  document.getElementById("year").textContent = new Date().getFullYear();
-  loadProject();
+    console.log("🎯 Tableau URL:", url);
+
+    try {
+      const options = {
+        hideTabs: true,
+        hideToolbar: false,
+        width: "100%",
+        height: "700px",
+        onFirstInteractive: function () {
+          console.log("✅ Tableau Viz Loaded");
+          loadingText.style.display = "none";
+          containerDiv.style.background = "transparent";
+        }
+      };
+      new tableau.Viz(containerDiv, url, options);
+    } catch (err) {
+      console.error("❌ Tableau Embed Error:", err);
+      loadingText.textContent = "Failed to load dashboard.";
+    }
+  } else {
+    document.getElementById("project-tableau").style.display = "none";
+  }
+});
 </script>
+
 
 </body>
 </html>
