--- a/project.html
+++ b/project.html
@@ -108,7 +108,7 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="index.html">Elsha Sovolina</a>
+      <a class="brand" href="index.html">⟸ Home</a>
     </div>
   </header>
 
