--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
         <a href="#hero">Contact</a>
-        <a href="#certification">certification</a>
+        <a href="#certification">Certification</a>
         <!-- Header Download CV button (robust & accessible) -->
 <a class="btn header-cv-btn" href="assets/resume.pdf" target="_blank" rel="noopener"
    aria-label="Download CV" data-text="Download CV">
