--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
         <a href="#hero">Contact</a>
-        <a href="#certification">Certification</a>
+        <a href="#education">Education</a>
+        <a href="#certification">Certification</a>    
         <!-- Header Download CV button (robust & accessible) -->
 <a class="btn header-cv-btn" href="assets/resume.pdf" target="_blank" rel="noopener"
    aria-label="Download CV" data-text="Download CV">
@@ -210,6 +211,29 @@
             <p>(2024–2025) — Transaction models to streamline internal claims and approvals.</p>
           </div>
         </div>
+      </div>
+    </section>
+     <!-- EXPERIENCE -->
+    <section id="education" class="section">
+      <div class="container">
+        <h2>Education</h2>
+
+        <article class="school">
+          <h3>Bina Nusantara</h3>
+          <p class="muted">Sept 2001 – Apr 2005</p>
+          <ul>
+            <p>Bachelor’s Degree  of Information Technology</p>
+            <p>GPA 3.19</p>
+          </ul>
+        </article>
+        <article class="school">
+          <h3>RevoU</h3>
+          <p class="muted">Jun 2025 – Sep 2025</p>
+          <ul>
+            <p>Faculty : Full-stack Data Analytics</p>
+            <p>Skills : Data analytics, Data Cleaning, Spreadsheet, SQL, Python, and Tableau/Power BI</p>
+          </ul>
+        </article>
       </div>
     </section>
 
