--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
    <section id="certification" class="certification">
   <div class="container certification-grid">
-    <h2>Education</h2>
+    <h2>Certificate</h2>
     <div class="certification-card">
       <h4>RevoU Full Stack Data Analysis</h4>
       <img src="assets/revou_certificate.jpg" alt="Certificate RevoU">
