--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </div>
       </div>
     </section>
-     <!-- EXPERIENCE -->
+     <!-- EDUCATION -->
     <section id="education" class="section">
       <div class="container">
         <h2>Education</h2>
