--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container">
       <a class="brand" href="#hero">Elsha Sovolina</a>
-      <button id="nav-toggle" aria-label="Open navigation">☰</button>
+      <button id="nav-toggle" aria-label="Toggle navigation" aria-expanded="false">☰</button>
       <nav id="main-nav" class="nav">
         <a href="#hero">About</a>
         <a href="#skills">Skills</a>
