--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </ul>
           </div>
           <div>
-            <h3>Analytics & Tools</h3>
+            <h3>Tools</h3>
             <ul>
               <li>MySQL</li>
               <li>Oracle</li>
