--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </ul>
         </article>
         <article class="job">
-          <h3>Indomobil (Dealer), PT Tunas Esa Mandiri (Forwarding) - Junior Porgrammer </h3>
+          <h3>Indomobil (Dealer), PT Tunas Esa Mandiri (Forwarding) - Junior Programmer </h3>
           <p class="muted">Sep 2005 – Nov 2007 • Jakarta</p>
           <ul>
             <li>Developed, modified, and troubleshot modules as requested by the IT Head.</li>
