add peopleU project
add peopleU

--- a/index.html
+++ b/index.html
@@ -190,6 +190,16 @@
                 <a href="project.html?name=steam">Read more</a>
               </p>
           </div>
+	  <div class="project-card">
+            <h4>PeopleU - SaaS Funnel steps explanation </h4>
+              <a href="project.html?name=peopleU">
+                <img src="assets/peopleU-thumb.jpg" alt="PeopleU project thumbnail"
+                    style="width:100%; border-radius:8px; box-shadow:0 4px 10px rgba(0,0,0,0.1); margin-bottom:8px;">
+              </a>
+              <p>(2025) — Analytical report and dashboard insights for <strong>PeopleU</strong> SaaS dataset.
+                <a href="project.html?name=peopleU">Read more</a>
+              </p>
+          </div>
         </div>
       </div>
     </section>
